# fs-monorepo

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-package-skeleton-tooling/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-REVIEW.md  SKELETON.md
.planning/phases/02-ci-hooks-docs-verification/: 02-02-PLAN.md  02-DISCUSSION-LOG.md  02-UAT.md  02-VERIFICATION.md
fixtures/: __init__.py
fixtures/data/: consents.json
fixtures/data/customers/: cust-001.json  cust-002.json  cust-003.json
fixtures/data/transactions/: cust-001-checking.json  cust-002-checking.json  cust-002-savings.json  cust-003-checking.json  cust-003-retirement.json  cust-003-savings.json
fixtures/generator/: __init__.py  __main__.py  accounts.py  build.py  catalog.py  config.py  profiles.py  schedule.py  transactions.py  tricky.py  writer.py
src/agent/: __init__.py
src/banking_client/: __init__.py
src/banking_client/analytics/: __init__.py  _recurrence.py  income.py  results.py  savings.py  (+1 more)
src/common/: __init__.py  config.py  errors.py  logging.py
src/mcp_server/: __init__.py
tests/: test_account_client.py  test_audit.py  test_auth.py  test_common.py  test_fixtures_generator.py  test_income.py  test_models.py  test_savings.py  test_spending.py  test_transaction_client.py
(+40 files in other folders)
